fixed scrollbar UI , chnaged editor theme from yonce to material-ocean, fixed editor title display

--- a/src/components/Editor/editor.styles.css
+++ b/src/components/Editor/editor.styles.css
@@ -1,16 +1,11 @@
 @import "codemirror/lib/codemirror.css";
-@import "codemirror/theme/yonce.css";
-
-#editor {
-	height: 13vh;
-}
+@import "codemirror/theme/material-ocean.css";
 
 .editor-title {
 	background-color: black;
-	color: white;
-	font-size: 1.2rem;
+	color: #eee;
+	font-size: 1rem;
 	letter-spacing: 2px;
-	padding: 0.5rem 1rem;
 }
 
 .CodeMirror {
